Sincronizacion vue correctamente

--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.bunny.net; font-src 'self' https://fonts.gstatic.com https://fonts.bunny.net; img-src 'self' data: https:; connect-src 'self' https: http: https://metamorfosis-back.test https://accounts-app.test;"
+    />
+    <title>Metamorfosis</title>
+    <!-- GitHub Pages SPA redirection handler (v2 - robust pathing) -->
+    <script type="text/javascript">
+      ;(function (l) {
+        if (l.search[1] === 'p') {
+          var decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&')
+            })
+            .filter(function (v) {
+              return v.indexOf('p=/') === 0
+            })[0]
+            .slice(3)
+          if (decoded !== l.pathname) {
+            var basePath = l.pathname.replace(/\/$/, '')
+            var otherParams = l.search
+              .slice(1)
+              .split('&')
+              .filter(function (v) {
+                return v.indexOf('p=/') !== 0
+              })
+              .join('&')
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Metamorfosis Front</title>
+            window.history.replaceState(
+              null,
+              null,
+              basePath + decoded + (otherParams ? '?' + otherParams : '') + l.hash,
+            )
+          }
+        }
+      })(window.location)
+    </script>
+  </head>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Metamorphous&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
